bug: 66798 Change GC option to PrintGCDateStamps
http://bugzilla.zimbra.com/show_bug.cgi?id=66798

Copied from Perforce
 Change: 497356